# progenitor

./: Cargo.toml
cargo-progenitor/src/: main.rs
example-build/: Cargo.toml
example-macro/: Cargo.toml
example-out-dir/: Cargo.toml
example-wasm/: Cargo.toml
progenitor-impl/src/: cli.rs  lib.rs  method.rs  security.rs  template.rs  util.rs
progenitor-impl/tests/: test_specific.rs
progenitor-impl/tests/output/: Cargo.toml
progenitor-impl/tests/output/src/: example_multipart_builder.rs  example_multipart_builder_tagged.rs  example_multipart_cli.rs  example_multipart_positional.rs
