[package]
name = "example-out-dir"
version = "0.0.1"
edition.workspace = true
rust-version.workspace = true

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
progenitor = { path = "../progenitor" }
reqwest = { workspace = true }
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "1.23", features = ["serde", "v4"] }
